# AnchorScope

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  SECURITY_AUDIT_COMPLETE.md  SECURITY_AUDIT_REPORT.md  SECURITY_AUDIT_SUMMARY.md  SECURITY_CHANGES.md  SECURITY_FIX_IMPLEMENTATION.md  SECURITY_IMPLEMENTATION_COMPLETE.md  SPEC_COMPLIANCE.md  app.py  code-review-prompt.md  demo.sh  demo_app.py  pi-session-2026-04-11T12-57-23-347Z_e64dbc75-2655-43fd-9893-c9fb788d3e4a.html
.github/workflows/: ci.yml  release.yml
docs/: SPEC.md  verification-report-spec-compliance.md
docs/plans/: 2025-04-06-comprehensive-refactoring-v1.0.1-to-v1.1.0.md  (+27 more)
examples/: demo.sh  demo_target.py  demo_target.rs  v1_1_0_showcase.sh  v1_2_0_showcase.sh  v1_3_0_showcase.sh  v2_0_0_showcase.sh
src/: cli.rs  config.rs  error.rs  hash.rs  lib.rs  main.rs  matcher.rs  storage.rs  trueid.rs
tests/: integration.rs  integration_test_helpers.rs  mod.rs
v1/: Cargo.toml  README.md
v1/src/: buffer_path.rs  cli.rs  hash.rs
v1/src/commands/: pipe.rs  read.rs  write.rs
v1/tests/: integration_test_helpers.rs
v1/tests/integration/: duplicate_true_id_error_tests.rs  edge_normalization_tests.rs  edge_position_tests.rs  error_hash_mismatch_tests.rs  error_io_tests.rs  error_multiple_matches_tests.rs  error_nomatch_tests.rs  forbidden_operations_tests.rs  label_command_tests.rs  mod.rs  pipe_command_tests.rs  read_success_tests.rs  single_chain_buffer_structure.rs  storage_lifecycle_tests.rs  validation_order_tests.rs  write_from_replacement_tests.rs  write_success_tests.rs
v1/tests/unit/: mod.rs
(+41 files in other folders)
