[package]
name = "anchorscope"
version = "1.1.0"
edition = "2021"

[[bin]]
name = "anchorscope"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
