[package]
name = "anchorscope"
version = "2.0.0"
edition = "2021"

[lib]
name = "anchorscope"
path = "src/lib.rs"

[[bin]]
name = "anchorscope"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
tempfile = "3"
