[package]
name = "anchorscope"
version = "1.3.0"
edition = "2021"

[[bin]]
name = "anchorscope"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
xxhash-rust = { version = "0.8", features = ["xxh3"] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"

tempfile = "3"
thiserror = "1"

[dev-dependencies]
tempfile = "3"
serial_test = "2.0"
